fix error virtual keyboard on mobile

--- a/src/styles/components/PaletteRightSidebar.css
+++ b/src/styles/components/PaletteRightSidebar.css
@@ -260,11 +260,14 @@
     left: 0;
     top: auto;
     bottom: 0;
-    height: 70vh;
-    max-height: 600px;
+    height: 100%;
+    max-height: 70vh;
     z-index: 1002;
     border-radius: 20px 20px 0 0;
     box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.15);
+    position: fixed;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
   }
 
   .palette-right-sidebar.closed {
